# vllm-omni-mac-tutorial

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: GLOSSARY.md
docs/plans/: 2026-07-10-from-scratch-course.md  2026-07-10-mac-tutorial.md
notebooks/: 00_course_orientation.ipynb  00_why_vllm_omni.ipynb  01_autoregressive_and_cache.ipynb  01_from_llm_to_omni.ipynb  02_diffusion_vs_ar.ipynb  02_vllm_foundations.ipynb  03_autoregressive_stages.ipynb  03_stage_graph.ipynb  04_diffusion_stages.ipynb  04_serving_and_scaling.ipynb  05_from_mac_to_linux.ipynb  05_stage_graphs.ipynb  06_request_lifecycle.ipynb  07_connectors_and_disaggregation.ipynb  08_scheduling_batching_scaling.ipynb  09_apis_and_streaming.ipynb  10_observability_and_benchmarking.ipynb  11_adding_a_model.ipynb  12_deployment_and_graduation.ipynb
scripts/: bootstrap.sh  build_notebooks.py  execute_notebooks.py
src/omni_tutorial/: __init__.py  batching.py  diffusion.py  kv_cache.py  pipeline.py  serving.py
tests/: test_batching.py  test_course.py  test_diffusion.py  test_kv_cache.py  test_pipeline.py  test_serving.py
