[project]
name = "vllm-omni-mac-tutorial"
version = "0.1.0"
description = "Executable Mac-friendly notebooks teaching vLLM-Omni architecture"
requires-python = ">=3.11,<3.13"
dependencies = [
  "jupyterlab>=4.2,<5", "matplotlib>=3.8,<4", "nbclient>=0.10,<1",
  "nbformat>=5.10,<6", "numpy>=1.26,<3", "pillow>=10,<12",
  "pytest>=8,<9", "pyyaml>=6,<7"
]
[build-system]
requires=["hatchling"]
build-backend="hatchling.build"
[tool.hatch.build.targets.wheel]
packages=["src/omni_tutorial"]
[tool.pytest.ini_options]
testpaths=["tests"]
